# prod-pet

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: index.html
docs/assets/: index-1EAyImiX.js  index-CngsCmjy.js  index-a0DgZk9L.css  index-cufQmYz-.css
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  PetWindow.tsx  routes.ts
src/components/: EmptyPage.tsx  PageHeader.tsx  PetWidget.tsx  Sidebar.tsx
src/domain/: healthEngine.ts  messageGenerator.ts  reminderCopy.ts  reminderEngine.ts  weeklyReportGenerator.ts  workdayUtils.ts
src/pages/: AiSettingsPage.tsx  ColleaguesPage.tsx  CommunicationLogsPage.tsx  CycleConfigPage.tsx  DashboardPage.tsx  HealthSettingsPage.tsx  PetDesignPage.tsx  WebDemoPage.tsx  WeeklyReportPage.tsx
src/services/: aiClient.ts  desktopWindow.ts
src/storage/: defaultData.ts  demoData.ts  storage.ts
src/styles/: global.css
src/types/: index.ts
