[package]
name = "pushpet"
version = "0.1.0"
description = "A tiny desktop companion for product managers"
authors = ["PushPet"]
edition = "2021"

[lib]
name = "pushpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
